--- a/assets/index.html
+++ b/assets/index.html
@@ -9,6 +9,6 @@
         <script defer src="/assets/js/script.js"></script>
     </head>
     <body>
-        
+        <canvas id="snake" width="512" height="512"></canvas>    
     </body>
 </html>
