--- a/assets/index.html
+++ b/assets/index.html
@@ -9,6 +9,7 @@
         <script defer src="/assets/js/script.js"></script>
     </head>
     <body>
+        <h1 class="titulo">Snake Game</h1>
         <canvas id="snake" width="512" height="512"></canvas>    
     </body>
 </html>
